fixed text align on mobile

--- a/src/components/TestTickets/styles/TestTickets.module.css
+++ b/src/components/TestTickets/styles/TestTickets.module.css
@@ -109,7 +109,7 @@
         align-items: center;
         justify-content: center;
         width: 100%;
-        height: 10vh;
+        height: 20vh;
         background-color: rgba(255, 255, 255, 0.9);
         padding: 15px;
         border-radius: 15px;
